Add style into 'description' section

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                    <li class="list__item">Perfect foe families</li>
                  </ul>
                  <div class="recommend">
-                   <p class="pecommend__count">
+                   <p class="recommend__count">
                      Lucy and 3 other friends recommend this hotel.
                    </p>
                    <div class="recommend__friends">
